--- a/sagemaker-existing-customer-spend-attrition-model-package.ipynb
+++ b/sagemaker-existing-customer-spend-attrition-model-package.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "role = get_execution_role()\n",
     "sess = sage.Session()\n",
-    "model_package_arn='<REPLACE WITH MODEL ARN e.g. arn:aws:sagemaker:[region]:[aws account]:model-package/spend-attrition-XXX>'\n",
+    "model_package_arn='<REPLACE WITH MODEL ARN e.g. arn:aws:sagemaker:[region]:[aws account]:model-package/existing-customer-spend-attrition-XXX>'\n",
     "s3_base_path='s3://<REPLACE WITH BUCKET NAME>'\n"
    ]
   },
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "from sagemaker import ModelPackage\n",
-    "model_name='spend-attrition'\n",
+    "model_name='existing-customer-spend-attrition'\n",
     "model = ModelPackage(name=model_name,\n",
     "                     role=role,\n",
     "                     model_package_arn=model_package_arn,\n",
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint_name = 'spend-attrition'"
+    "endpoint_name = 'existing-customer-spend-attrition'"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "source": [
     "s3_output_path=s3_base_path + '/output/'\n",
     "transformer = sage.transformer.Transformer(\n",
-    "    base_transform_job_name='demand-forecasting-batch-transform',\n",
+    "    base_transform_job_name='existing-customer-spend-attrition-batch-transform',\n",
     "    model_name=model_name,\n",
     "    instance_count=1,\n",
     "    instance_type='ml.m5.large',\n",
